del report icon name sigin Update permision service recevice

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,9 @@
     package="com.aurora.store">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"   tools:node="remove"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" tools:node="remove"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
@@ -37,17 +38,17 @@
         android:name="android.permission.INSTALL_PACKAGES"
         tools:ignore="ProtectedPermissions" />
 
-    <uses-permission
-        android:name="android.permission.READ_LOGS"
-        tools:ignore="ProtectedPermissions" />
+<!--    <uses-permission-->
+<!--        android:name="android.permission.READ_LOGS"-->
+<!--        tools:ignore="ProtectedPermissions" />-->
 
-    <uses-permission
-        android:name="android.permission.ACCESS_MOCK_LOCATION"
-        tools:ignore="MockLocation,ProtectedPermissions" />
+<!--    <uses-permission-->
+<!--        android:name="android.permission.ACCESS_MOCK_LOCATION"-->
+<!--        tools:ignore="MockLocation,ProtectedPermissions" />-->
 
-    <uses-feature
-        android:name="android.hardware.location.gps"
-        android:required="false" />
+<!--    <uses-feature-->
+<!--        android:name="android.hardware.location.gps"-->
+<!--        android:required="false" />-->
 
     <uses-feature
         android:name="android.software.leanback"
@@ -63,10 +64,9 @@
         android:allowClearUserData="true"
         android:banner="@mipmap/ic_launcher"
         android:fullBackupContent="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name2"
         android:requestLegacyExternalStorage="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
@@ -165,12 +165,12 @@
         <activity android:name=".ui.details.ReviewsActivity" />
         <activity android:name=".ui.details.ReadMoreActivity" />
 
-        <activity
-            android:name=".report.AcraErrorActivity"
-            android:excludeFromRecents="true"
-            android:finishOnTaskLaunch="true"
-            android:launchMode="singleInstance" />
-        <activity android:name=".ui.spoof.GenericSpoofActivity" />
+<!--        <activity-->
+<!--            android:name=".report.AcraErrorActivity"-->
+<!--            android:excludeFromRecents="true"-->
+<!--            android:finishOnTaskLaunch="true"-->
+<!--            android:launchMode="singleInstance" />-->
+<!--        <activity android:name=".ui.spoof.GenericSpoofActivity" />-->
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -187,18 +187,50 @@
         <receiver android:name=".receiver.DownloadPauseReceiver" />
         <receiver android:name=".receiver.DownloadResumeReceiver" />
         <receiver android:name=".receiver.UpdatesReceiver" />
-        <receiver
-            android:name=".receiver.BootReceiver"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
+<!--        <receiver-->
+<!--            android:name=".receiver.BootReceiver"-->
+<!--            android:enabled="true"-->
+<!--            android:exported="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.BOOT_COMPLETED" />-->
+<!--            </intent-filter>-->
+<!--        </receiver>-->
 
         <service android:name=".installer.InstallerService" />
-        <service android:name=".service.SelfUpdateService" />
+<!--        <service android:name=".service.SelfUpdateService" />-->
         <service android:name=".service.BulkUpdateService" />
         <service android:name=".service.NotificationService" />
+
+
+        <receiver tools:node="remove" android:directBootAware="false" android:enabled="false" android:exported="false" android:name="androidx.work.impl.background.systemalarm.ConstraintProxy$BatteryChargingProxy">
+            <intent-filter>
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED"/>
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED"/>
+            </intent-filter>
+        </receiver>
+        <receiver tools:node="remove" android:directBootAware="false" android:enabled="false" android:exported="false" android:name="androidx.work.impl.background.systemalarm.ConstraintProxy$BatteryNotLowProxy">
+            <intent-filter>
+                <action android:name="android.intent.action.BATTERY_OKAY"/>
+                <action android:name="android.intent.action.BATTERY_LOW"/>
+            </intent-filter>
+        </receiver>
+        <receiver tools:node="remove" android:directBootAware="false" android:enabled="false" android:exported="false" android:name="androidx.work.impl.background.systemalarm.ConstraintProxy$StorageNotLowProxy">
+            <intent-filter>
+                <action android:name="android.intent.action.DEVICE_STORAGE_LOW"/>
+                <action android:name="android.intent.action.DEVICE_STORAGE_OK"/>
+            </intent-filter>
+        </receiver>
+        <receiver tools:node="remove" android:directBootAware="false" android:enabled="false" android:exported="false" android:name="androidx.work.impl.background.systemalarm.ConstraintProxy$NetworkStateProxy">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+            </intent-filter>
+        </receiver>
+        <receiver tools:node="remove" android:directBootAware="false" android:enabled="false" android:exported="false" android:name="androidx.work.impl.background.systemalarm.RescheduleReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.TIME_SET"/>
+                <action android:name="android.intent.action.TIMEZONE_CHANGED"/>
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
